fix: text is more clearer behind cursor

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -5,7 +5,7 @@
 
 // General colors
 @syntax-text-color: @ForegroundColour;
-@syntax-cursor-color: @BoldRed;
+@syntax-cursor-color: fade(@BoldMagenta, 45%);
 @syntax-selection-color: saturate(fade(@Yellow, 10%), 30%);
 @syntax-background-color: @BackgroundColour;
 
